syntax = "proto3";

package stwartchain.secured;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "stwartchain/secured/params.proto";
import "stwartchain/secured/addresses.proto";

option go_package = "gitlab.stalwart.tech/ijio/main/backend/stwart-chain/x/secured/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/stwart/secured/params";
  
  }
  
  // Queries a list of Addresses items.
  rpc Addresses    (QueryGetAddressesRequest) returns (QueryGetAddressesResponse) {
    option (google.api.http).get = "/stwart/secured/addresses/{id}";
  
  }
  rpc AddressesAll (QueryAllAddressesRequest) returns (QueryAllAddressesResponse) {
    option (google.api.http).get = "/stwart/secured/addresses";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryGetAddressesRequest {
  uint64 id = 1;
}

message QueryGetAddressRequest {
  string address = 1;
}

message QueryGetAddressesResponse {
  Addresses Addresses = 1 [(gogoproto.nullable) = false];
}

message QueryAllAddressesRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllAddressesResponse {
  repeated Addresses                              Addresses  = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

