syntax = "proto3";

package stwartchain.secured;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "stwartchain/secured/params.proto";
import "stwartchain/secured/addresses.proto";

option go_package = "github.com/stalwart-algoritmiclab/stwart-chain-go/x/secured/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
  
  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams    (MsgUpdateParams   ) returns (MsgUpdateParamsResponse   );
  rpc CreateAddresses (MsgCreateAddresses) returns (MsgCreateAddressesResponse);
  rpc UpdateAddresses (MsgUpdateAddresses) returns (MsgUpdateAddressesResponse);
  rpc DeleteAddresses (MsgDeleteAddresses) returns (MsgDeleteAddressesResponse);
}
// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) =                        "authority";
  option           (amino.name) = "stwart/x/secured/MsgUpdateParams";
  
  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  
  // params defines the module parameters to update.
  
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

message MsgCreateAddresses {
  option (cosmos.msg.v1.signer) = "creator";
           string creator = 1;
  repeated string address = 2;
}

message MsgCreateAddressesResponse {
  uint64 id = 1;
}

message MsgUpdateAddresses {
  option (cosmos.msg.v1.signer) = "creator";
           string creator = 1;
           uint64 id      = 2;
  repeated string address = 3;
}

message MsgUpdateAddressesResponse {}

message MsgDeleteAddresses {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  uint64 id      = 2;
}

message MsgDeleteAddressesResponse {}

message MsgDeleteByAddresses {
  string creator = 1;
  repeated string address = 3;
}
